complete and fix e2e tests