@@ -121,6 +121,7 @@
                     <includes>
                         <include>**/*E2ETest.java</include>
                     </includes>
+                    <argLine>-Dnet.bytebuddy.experimental=true -XX:+EnableDynamicAgentLoading --enable-native-access=ALL-UNNAMED --sun-misc-unsafe-memory-access=allow -Xshare:off</argLine>
                 </configuration>
             </plugin>
 
